[package]
name = "tachyon-networking"
version = "0.1.9"
edition = "2021"
authors = [
    "Chris Ochs <chris@ochsnet.com>"
]

description = "a Nack based reliable udp library for games and IPC"
keywords = ["gamedev", "networking", "udp","ipc"]
categories = ["game-engines", "network-programming"]

readme = "README.md"
license = "MIT"

repository = "https://github.com/gamemachine/tachyon-networking"

[lib]
name="tachyon"
crate-type = ["rlib", "cdylib"]


[dependencies]
libc = "0.2"
rustc-hash = "2.0"
socket2 = "0.5"
varuint = "0.7"
rand = "0.9.0-alpha.2"
serial_test = "3.1"
rayon = "1.10"
crossbeam = "0.8"
synchronoise = "1.0"

[profile.test]
opt-level = 3
